istio/app-sleep1.yaml
apiVersion: v1
kind: Service
metadata:
  name: client1
  namespace: istio-client1
  labels:
    app: client1
    service: client1
  annotations:
    client-id-header: client1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: client1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client1
  namespace: istio-client1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client1
  template:
    metadata:
      labels:
        app: client1
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: client1
      containers:
      - name: client1
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
