istio/app-sleep2.yaml
apiVersion: v1
kind: Service
metadata:
  name: client2
  namespace: istio-client2
  labels:
    app: client2
    service: client2
  annotations:
    client-id-header: client2
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: client2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2
  namespace: istio-client2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: client2
      containers:
      - name: client2
        image: curlimages/curl
        command: ["/bin/sleep", "infinity"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
